--- a/css/layout.css
+++ b/css/layout.css
@@ -5,20 +5,20 @@ img {
   margin: 10px;
 }
 
-article:last-child {
+/*article:last-child {
   display: none;
-}
+}*/
 
 .tab-list {
   display: inline;
 }
 
-@media screen and (max-width: 600px) {
+/*@media screen and (max-width: 600px) {*/
   article {
     padding: 50px;
     margin-bottom: 50px;
   }
-}
+/*}*/
 .tab-content.hide {
   display: none;
 }
