--- a/template/article.html
+++ b/template/article.html
@@ -1,7 +1,7 @@
 <article class="article">
   <h1>{{title}}</h1>
   <section class="category">Category: {{category}}</section>
-  <address>By:<a href="{{authorUrl}}" target="_blank">{{author}}</a>published {{daysOld}} days ago</address>
+  <address>By <a href="{{authorUrl}}">{{author}}</a>published {{daysOld}} days ago</address>
   <section class="body">{{{markedBody}}}</section>
   <a href="#" class="read-on">Read On</a>
 </article>
