--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-#blog-title {
+#byline {
   background-color: #407F7F;
   text-align: center;
   font-family: 'Cinzel', serif;
@@ -15,6 +15,19 @@ nav {
   margin-left: 20px;
 }
 
+h1 {
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 25px;
+
+}
+
+p {
+  /*border-bottom: 1px solid;*/
+  padding-left: 20px;
+}
 
 #home {
   background-image: url(0003-home3.svg);
@@ -42,6 +55,7 @@ nav {
   background-repeat: no-repeat;
   background-size: contain;
   padding-left: 25px;
+
 }
 
 #facebook {
@@ -64,6 +78,10 @@ nav {
   background-size: contain;
   padding-left: 25px;
 }
+
+/*address {
+  display: inline-block;
+}*/
 
 article {
   border-bottom: 1px solid;
